Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <title>HTML Tables</title>
 </head>
 <body>
-
-  <!-- Write your HTML here -->
+  <table>
+    <tr>
+      <th>City</th>
+      <th>State</th>
+      <th>2017 Estimate</th>
+    </tr>
+    
+    
+  </table>
   
 </body>
 </html>
