--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <th>State</th>
       <th>2017 Estimate</th>
     </tr>
+    <tr>
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
+    </tr>
     
     
   </table>
